tests/dummy/app/styles/components/_ember-select-guru.scss
.ember-select-guru {
  position: relative;
  min-height: $base * 7;

  &__container {
    width: 100%;
    border: solid 1px $border;
    border-radius: 5px;
    overflow: hidden;
    position: absolute;

    &:hover {
      box-shadow: 0 0 8px -6px $black;
    }
  }

  &__trigger {
    padding: $base $base * 2;
    cursor: pointer;
    position: relative;

    &:before,
    &:after {
      font-size: 8px;
      position: absolute;
      right: 10px;
    }

    &:before {
      content: '\25b2';
      top: $base;
    }

    &:after {
      content: '\25bc';
      bottom: $base;
    }
  }

  &__search {

    &-wrapper {
      padding: 0 $base * 2 $base;
    }

    box-sizing: border-box;
    padding: $base;
    width: 100%;
    border: solid 1px $border;
  }

  &__dropdown {
    width: 100%;
    box-sizing: border-box;
    background: $white;
    overflow: hidden;
  }

  &__option {
    padding: $base $base * 2 $base - 3;
    cursor: pointer;

    &:hover {
      background: $hover;
    }

    &.is-active {
      background: $active;
    }
  }
}

